--- a/changes.txt
+++ b/changes.txt
@@ -7,3 +7,8 @@ add below code in web.xml
     <res-type>javax.sql.DataSource</res-type>
     <res-auth>Container</res-auth>
   </resource-ref>
+
+add the file 
+com.springweb.repository.SampleRepository
+
+overwrite the dispatcher-servlet.xml file with the one uploaded.
